--- a/src/run_gtk_app.bat.in
+++ b/src/run_gtk_app.bat.in
@@ -1,74 +1,91 @@
 @echo off
 setlocal
 
-:: Path to DLLs GTK3 (provided by CMake)
+echo ===== Starting X-RR GTK App Setup =====
+
+:: Paths provided by CMake
 set GTK_PATH=@GTK_PATH@
-set GTK_CSS_PATH=%~dp0app.css
+set CMAKE_SOURCE_DIR=@CMAKE_SOURCE_DIR@
+set POSTGRESQL_ROOT=@POSTGRESQL_ROOT@
 set GTK_THEME=Adwaita:dark
 
-:: Set environment variables to improve UTF-8 handling
+:: Environment variables for UTF-8 and GTK
 set G_MESSAGES_DEBUG=all
 set LANG=en_US.UTF-8
 set LC_ALL=en_US.UTF-8
 set PANGO_WIN32_NO_UNISCRIBE=1
 set GTK_IM_MODULE=ime
 
-:: Copy DLLs
-copy "%GTK_PATH%\libgtk-3-0.dll" .
-copy "%GTK_PATH%\libgdk-3-0.dll" .
-copy "%GTK_PATH%\libgobject-2.0-0.dll" .
-copy "%GTK_PATH%\libglib-2.0-0.dll" .
-copy "%GTK_PATH%\libcairo-2.dll" .
-copy "%GTK_PATH%\libpango-1.0-0.dll" .
-copy "%GTK_PATH%\libpangocairo-1.0-0.dll" .
-copy "%GTK_PATH%\libgdk_pixbuf-2.0-0.dll" .
-copy "%GTK_PATH%\libatk-1.0-0.dll" .
-copy "%GTK_PATH%\libepoxy-0.dll" .
-copy "%GTK_PATH%\libffi-8.dll" .
-copy "%GTK_PATH%\libgio-2.0-0.dll" .
-copy "%GTK_PATH%\libgmodule-2.0-0.dll" .
-copy "%GTK_PATH%\libharfbuzz-0.dll" .
-copy "%GTK_PATH%\libintl-8.dll" .
-copy "%GTK_PATH%\libpangoft2-1.0-0.dll" .
-copy "%GTK_PATH%\libpangowin32-1.0-0.dll" .
-copy "%GTK_PATH%\libpcre-1.dll" .
-copy "%GTK_PATH%\libpixman-1-0.dll" .
-copy "%GTK_PATH%\libpng16-16.dll" .
-copy "%GTK_PATH%\libz.dll" .
+:: Set PATH for DLL lookup
+set PATH=%CD%;%GTK_PATH%;%POSTGRESQL_ROOT%\bin;%PATH%
 
-:: Copy .env from source directory
-if exist "@CMAKE_SOURCE_DIR@\.env" (
-    copy "@CMAKE_SOURCE_DIR@\.env" "%~dp0"
-    echo Copied .env from project root
+:: Copy GTK DLLs
+echo Copying GTK DLLs...
+for %%F in (
+    libgtk-3-0.dll
+    libgdk-3-0.dll
+    libgobject-2.0-0.dll
+    libglib-2.0-0.dll
+    libcairo-2.dll
+    libpango-1.0-0.dll
+    libpangocairo-1.0-0.dll
+    libgdk_pixbuf-2.0-0.dll
+    libatk-1.0-0.dll
+    libepoxy-0.dll
+    libffi-8.dll
+    libgio-2.0-0.dll
+    libgmodule-2.0-0.dll
+    libharfbuzz-0.dll
+    libintl-8.dll
+    libpangoft2-1.0-0.dll
+    libpangowin32-1.0-0.dll
+    libpcre-1.dll
+    libpixman-1-0.dll
+    libpng16-16.dll
+    libz.dll
+) do (
+    if exist "%GTK_PATH%\%%F" (
+        copy "%GTK_PATH%\%%F" . >nul
+    ) else (
+        echo WARNING: %%F not found in %GTK_PATH%
+    )
+)
+
+:: Copy .env
+if exist "%CMAKE_SOURCE_DIR%\.env" (
+    copy "%CMAKE_SOURCE_DIR%\.env" "%~dp0"
+    echo Copied .env
 ) else (
     echo WARNING: .env not found in project root
 )
 
-:: Copy app.css from src/styles
-if exist "@CMAKE_SOURCE_DIR@/src/styles/app.css" (
-    copy "@CMAKE_SOURCE_DIR@/src/styles/app.css" "%~dp0"
-    echo Copied app.css from src/styles
+:: Copy app.css
+if exist "%CMAKE_SOURCE_DIR%\src\styles\app.css" (
+    copy "%CMAKE_SOURCE_DIR%\src\styles\app.css" "%~dp0"
+    echo Copied app.css
 ) else (
     echo WARNING: app.css not found in src/styles
 )
 
-:: Copy icon.png from project root
-if exist "@CMAKE_SOURCE_DIR@/icon.png" (
-    copy "@CMAKE_SOURCE_DIR@/icon.png" "%~dp0"
-    echo Copied icon.png from project root
+:: Copy icon.png
+if exist "%CMAKE_SOURCE_DIR%\icon.png" (
+    copy "%CMAKE_SOURCE_DIR%\icon.png" "%~dp0"
+    echo Copied icon.png
 ) else (
     echo WARNING: icon.png not found in project root
 )
 
-:: Check if the executable exists
+:: Verify executable exists
 if not exist "gtk_app.exe" (
-    echo ERROR: gtk_app.exe not found. Compile the application first.
+    echo ERROR: gtk_app.exe not found in %CD%
     pause
     exit /b 1
 )
 
-:: Launch the application
-echo Starting GTK application...
-.\gtk_app.exe
+echo ===== Running gtk_app.exe =====
+gtk_app.exe
+
+echo ===== Application exited =====
+pause
 
 endlocal
