refact: changed cmakelists to update env handling process

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -171,15 +171,15 @@ install(FILES ${DLL_FILES_GTK} DESTINATION bin)
 include(InstallRequiredSystemLibraries)
 
 set(CPACK_PACKAGE_NAME "X-RR")
-set(CPACK_PACKAGE_VENDOR "Ryhverse Inc.")
-set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "X-RR Chat Application")
+set(CPACK_PACKAGE_VENDOR "Ryhad Inc.")
+set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "X-2R Chat Application")
 set(CPACK_PACKAGE_VERSION "1.0.0")
 set(CPACK_PACKAGE_INSTALL_DIRECTORY "X-RR")
-set(CPACK_PACKAGE_FILE_NAME "X-RR-1.0.0")
+set(CPACK_PACKAGE_FILE_NAME "X-RR-Office_Edition-1.0.0")
 set(CPACK_GENERATOR "NSIS")
 
-set(CPACK_NSIS_DISPLAY_NAME "X-RR")
-set(CPACK_NSIS_PACKAGE_NAME "X-RR Installer")
+set(CPACK_NSIS_DISPLAY_NAME "X-2R")
+set(CPACK_NSIS_PACKAGE_NAME "X-2R Installer By The One and Only Ryhad (and Rimma!)")
 set(CPACK_NSIS_EXECUTABLES_DIRECTORY ".")
 set(CPACK_NSIS_MUI_ICON "${CMAKE_SOURCE_DIR}/x2r_logo.ico")
 set(CPACK_NSIS_INSTALLED_ICON_NAME "bin/gtk_app.exe")
